--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <img  src="https://raw.githubusercontent.com/TheCodeWhy/thecodewhy.github.io/main/R/noGame.png">
         </div>
         <div class="item" >
-            <img title="Maze"  src="https://raw.githubusercontent.com/TheCodeWhy/thecodewhy.github.io/main/R/icon1.png">
+            <img title="Maze" id="maze" src="https://raw.githubusercontent.com/TheCodeWhy/thecodewhy.github.io/main/R/icon1.png">
         </div>
         <div class="item">
-            <img  src="https://raw.githubusercontent.com/TheCodeWhy/thecodewhy.github.io/main/R/MathClimbIcon.png">
+            <img id="mathclimb" src="https://raw.githubusercontent.com/TheCodeWhy/thecodewhy.github.io/main/R/MathClimbIcon.png">
         </div>
         <div class="item">
             <img  src="https://raw.githubusercontent.com/TheCodeWhy/thecodewhy.github.io/main/R/noGame.png">
